# AegisAI

./: .dockerignore  .env.audit.example  .env.docker  .env.docker.example  .flake8  .gitignore  MANIFEST.in  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml  ci.yaml
benchmarks/: latency_benchmark.py  locustfile.py
config/: policy_rules.py  policy_rules.yaml
deploy/: DEPLOYMENT.md
deploy/ecs/: task-definition.json
docker/: Dockerfile  Dockerfile.dev  entrypoint.sh
docker/prometheus/: prometheus.yml
docs/: DATA_AUDIT_LAYER.md  DEPLOYMENT.md  DESIGN_DECISIONS.md  IMPLEMENTATION.md  SCALING.md  architecture.md  instructions.md  native_explainability.md  scalability.md
docs/adr/: 0000-template.md  0001-multi-agent-parallel-orchestration.md
examples/: example_ato.py
infra/: main.tf  outputs.tf  providers.tf  tfplan  variables.tf
infra/modules/ecs/: main.tf  outputs.tf  variables.tf
infra/modules/iam/: main.tf  outputs.tf  variables.tf
infra/modules/storage/: main.tf  outputs.tf  variables.tf
logs/audit/: aegis_audit_2026-01-27.jsonl  aegis_audit_2026-01-28.jsonl
models/risk_model_v1/: metadata.json  metrics.json
scripts/: audit_trail_example.py  demo.py  test_api.py
src/aegis_ai/: __init__.py
src/aegis_ai/agents/: __init__.py
src/aegis_ai/agents/behavior/: __init__.py  agent.py  schema.py
src/aegis_ai/agents/confidence/: __init__.py  agent.py  schema.py
src/aegis_ai/agents/detection/: __init__.py  agent.py  schema.py
src/aegis_ai/agents/explanation/: __init__.py  agent.py  schema.py  templates.py
src/aegis_ai/agents/network/: __init__.py  agent.py  schema.py
src/aegis_ai/api/: __init__.py  gateway.py  schemas.py  service.py
src/aegis_ai/common/: __init__.py  constants.py  exceptions.py
src/aegis_ai/common/config/: __init__.py  _deprecated_base.py  _deprecated_settings.py  emergency.py  settings.py
src/aegis_ai/common/exceptions/: __init__.py
src/aegis_ai/common/logging/: __init__.py  logger.py
src/aegis_ai/core/: __init__.py  base.py  types.py
src/aegis_ai/data/: __init__.py
src/aegis_ai/data/generators/: __init__.py  ato_login.py  base_generator.py  generate_dataset.py  legit_login.py
src/aegis_ai/data/schemas/: __init__.py  device.py  login_event.py  models.py  risk_decision.py  session.py  user.py
src/aegis_ai/data/synthetic_generator/: __init__.py  ato_login.py  generate_dataset.py  legit_login.py
src/aegis_ai/data/validators/: __init__.py  schema_validator.py
src/aegis_ai/evaluation/: __init__.py  metrics.py  runner.py
src/aegis_ai/governance/: __init__.py  override.py  review.py  schemas.py
src/aegis_ai/governance/audit/: __init__.py  background_writer.py  config.py  dynamodb_metadata.py  logger.py  s3_store.py  store.py  unified_trail.py
src/aegis_ai/governance/policies/: __init__.py  (+1 more)
src/aegis_ai/models/: __init__.py  artifacts.py
src/aegis_ai/monitoring/: metrics.py
src/aegis_ai/orchestration/: __init__.py  agent_router.py  decision_context.py  decision_flow.py  flow.py  router.py
tests/: __init__.py  demo.py
tests/fixtures/: login_events.py
tests/integration/: test_end_to_end.py  test_policy_integration.py
tests/unit/: test_behavior_agent.py  test_confidence_agent.py  test_detection_agent.py  test_explanation_agent.py  test_network_agent.py
tests/unit/agents/: __init__.py  test_behavior_agent.py  test_confidence_agent.py  test_detection_agent.py  test_explanation_agent.py  test_network_agent.py
tests/unit/api/: test_gateway.py
tests/unit/config/: test_kill_switches.py  test_settings.py
tests/unit/governance/: test_audit_logger.py  test_dynamodb_metadata.py  test_human_override.py  test_policy_engine.py  test_review_system.py  test_s3_audit_store.py  test_unified_audit_trail.py
tests/unit/models/: __init__.py  test_calibration.py  test_model_artifacts.py  test_risk_model.py
tests/unit/monitoring/: test_metrics_collector.py
(+22 files in other folders)
