[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis-ai"
version = "0.1.0"
description = "Agentic fraud & trust intelligence system for Account Takeover detection"
authors = [{name = "AegisAI Team"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.14"

dependencies = [
    "pydantic>=2.0,<3",
    "pandas>=2.0",
    "numpy>=1.24",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "scikit-learn>=1.3",
    "shap>=0.44",
    "torch>=2.0",
    "torch-geometric>=2.3",
    "pyyaml>=6.0",
    "fastapi>=0.104",
    "uvicorn>=0.24",
    "mlflow>=2.8",
    "python-dotenv>=1.0",
]


dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "pylint>=3.0",
    "mypy>=1.5",
    "isort>=5.12",
    "flake8>=6.1",
]

docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=1.3",
]

[tool.setuptools]
packages = ["src.aegis_ai"]

[tool.black]
line-length = 100
target-version = ['py311', 'py312', 'py313']

[tool.pylint]
max-line-length = 100

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
]
