[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis-ai"
version = "0.1.0"
description = "Agentic fraud & trust intelligence system for Account Takeover detection"
authors = [{name = "AegisAI Team"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "pydantic>=2.0,<3",
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "pyyaml>=6.0",
    "fastapi>=0.104",
    "uvicorn>=0.24",
    "python-dotenv>=1.0",
    "boto3>=1.42.37",
]

[project.scripts]
# Entry points for CLI (currently not used in containerized deployment)
# aegis-ai = "aegis_ai.main:main"

[project.optional-dependencies]
ml = [
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "shap>=0.44",
    "torch>=2.0",
    "torch-geometric>=2.3",
    "mlflow>=2.8",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.21",
    "httpx>=0.28",
    "black>=24.0",
    "pylint>=3.0",
    "mypy>=1.5",
    "isort>=5.12",
    "flake8>=7.0",
    "bandit>=1.7",
]

docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=1.3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py311', 'py312', 'py313']
exclude = '''
/(
    \.git
    | \.venv
    | __pycache__
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["aegis_ai"]

[tool.pylint.main]
max-line-length = 100
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
]
ignore-patterns = ["test_.*\\.py"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = ["tests/", "build/", "dist/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src/aegis_ai"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
